footer to bottom on desktop view as well as picture gaps fixed

--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,8 @@ button{
   }
   .gallery{
     width: 75%;
+    row-gap: 100px;
+    column-gap: 100px;
   }
   #image1, #image2, #image3, #image4, #image5, #image6, #image7, #image8, #image9, #image10, #image11, #image12{
     width: 200px;
@@ -464,7 +466,7 @@ button{
 @media screen and (min-width: 1000px){
   .gallery{
     width: 67%;
-    row-gap: 50px;
+    row-gap: 170px;
     column-gap: 100px;
   }
   #image1, #image2, #image3, #image4, #image5, #image6, #image7, #image8, #image9, #image10, #image11, #image12{
@@ -508,5 +510,12 @@ button{
     margin-left: 100px;
     font-size: 18px;
   }
+  footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+  }
+  
   
 }
